      of multi-page plots.

      \item \code{tools::latexToUtf8()} again knows about \samp{\\~{n}}
      and other letters with tilde, fixing a regression in \R 4.3.0.

      \item \code{tar(*, tar = "internal")} no longer creates out-of-spec
      tar files in the very rare case of user or group names longer than
      32 bytes, fixing \PR{17871} with thanks to Ivan Krylov.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.1}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The C-level API version of \R's \code{integrate()},
      \code{Rdqags()} in \file{Applic.h}, now returns the correct number of
      integrand evaluations \code{neval}, fixing \PR{18515} reported and
      diagnosed by Stephen Wade.

      \item The C prototypes for LAPACK calls \code{dspgv} and \code{dtptrs}
      in \file{R_exts/Lapack.h} had one too many and one too few
      character length arguments --- but this has not caused any known
      issues. To get the corrected prototypes, include
      \preformatted{
	#include <Rconfig.h> // for PR18534fixed
	#ifdef PR18534fixed
	# define usePR18534fix 1
        #endif
	#include <R_exts/Lapack.h>
      }
      in your C/C++ code (\PR{18534}).
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Many of the checks of esoteric Internet operations and those
      using unreliable external sites have been moved to a new target
      that is not run by default and primarily intended for the core
      developers.  To run them use
\preformatted{
	cd tests; make test-Internet-dev
}
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{.S3methods()}, typically called from \code{methods()},
      again marks methods from package \pkg{base} as \code{visible}.

      Also, the visibility of non-\pkg{base} methods is again determined by
      the method's presence in \code{\link{search}()}.

      \item \code{tools::Rdiff()} is now more robust against invalid